# opt-int-old-cyclopts

./: CMakeLists.txt  CyclusSolver.cpp  CyclusSolver.h  CyclusSolverTools.h  Function.cpp  Function.h  LICENSE.rst  README.md  README.rst  build_and_run_ex.sh  setup.py
CMake/: FindCOIN.cmake
Examples/: App.cpp  Makefile
Interface/: CMakeLists.txt  CyclusSolverInterface.h
Solver/: CBCSolver.cpp  CBCSolver.h  CMakeLists.txt  CyclusSolver.cpp
Utility/: CMakeLists.txt  Variable.h
examples/: App.cpp  CMakeLists.txt  Makefile  output  setup.py
examples/CMake/: FindCOIN.cmake  FindCYCLOPTS.cmake~
examples/src/: App.cpp
examples/src/CMake/: FindCOIN.cmake  FindCYCLOPTS.cmake
src/: CBCSolver.cpp  CBCSolver.h  CMakeLists.txt  CycloptsLimits.h  Function.cpp  Function.h  Solver.cpp  Solver.h  SolverInterface.cpp  SolverInterface.h  SolverTools.h  Variable.cpp  Variable.h  cbc_solver.h  function.h  solver.h  solver_interface.h  solver_tools.h  variable.h
src/CMake/: FindCOIN.cmake
src/Interface/: CMakeLists.txt  CyclusSolverInterface.cpp  CyclusSolverInterface.h  SolverInterface.cpp  SolverInterface.h
src/Solver/: CBCSolver.cpp  CBCSolver.h  CMakeLists.txt  CyclusSolver.cpp  CyclusSolver.h  Solver.cpp  Solver.h
src/Utility/: CMakeLists.txt  CycloptsLimits.h  Function.cpp  Function.h  Limits.h  SolverTools.h  Variable.cpp  Variable.h
